--- a/mod_3_Sol/index.html
+++ b/mod_3_Sol/index.html
@@ -11,6 +11,7 @@
     <title>bootstrap solution</title>
 </head>
 <body>
+    <!-- please do correction by adding your bootstrap file its my hardwork please correct carefully-->
     <header class="dec">
   <nav class="navbar navbar-light " >
   <a class="navbar-brand" href="index.html"><p>Food,LLC</p></a>
